[package]
name = "hdf5-sys"
version = "0.2.7"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/hdf5-sys"
homepage = "https://github.com/stainless-steel/hdf5-sys"
documentation = "https://stainless-steel.github.io/hdf5-sys"
description = "The package provides bindings to HDF5."
build = "build.rs"
links = "hdf5"
exclude = ["source/tools/testfiles/*", "source/tools/*/testfiles/*"]

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
